# local_case_organizer

./: .gitignore  INSTALL_AND_FIRST_TEST.md  README.md  README_DE.md  RELEASE_CHECKLIST.md  local_case_organizer_ui_assets.py  local_case_organizer_ui_fixups.py  local_case_organizer_ui_override.py  local_case_organizer_ui_theme_fixups.py  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: 00_beginner_quickstart.md  02_productization_roadmap.md  13_python_cli_runtime.md  README.md  commands.md  roadmap_v1.md
docs/guides/: beginner_quickstart.md  install_and_first_test.md
docs/platform/: linux.md  macos.md  windows.md
docs/reference/: commands.md  python_cli_runtime.md
docs/release/: release_checklist.md
docs/roadmap/: productization_roadmap.md  roadmap_v1.md
examples/demo_case/: README.md
profiles/default/: README.md  categories.json
scripts/: README.md  build-register.ps1  build-timeline.ps1  build-timeline.sh  check.command  check.ps1  check.sh  doctor.command  doctor.ps1  doctor.sh  export-package.ps1  export-package.sh  import.command  import.ps1  import.sh  setup.command  setup.ps1  start_here.command  start_here.ps1  start_here.sh  status.command  status.ps1  status.sh
scripts/linux/: build-register.sh  build-timeline.sh  check.sh  doctor.sh  export-package.sh  import.sh  setup.sh  start_here.sh  status.sh  ui.sh
scripts/macos/: build-register.command  build-timeline.command  check.command  doctor.command  export-package.command  import.command  setup.command  start_here.command  status.command  ui.command
scripts/windows/: check.ps1  (+9 more)
(+21 files in other folders)
